Adaptar consultas sql para askosi para postgres y oracle

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -114,7 +114,7 @@
 2.configureAll.dspacedirconf.notexist=There is not exist #?# or is not readable, or the current directory #?# is not writable.
 2.configureAll.restart="dspace.cfg" file has been modified in the work directory #?#.\nYou must copy it to the dspace config directory.\nYou must restart  the servlet (e.g. Tomcat) and this installer thereafter
 
-2.addAuthDCElements=DC elements as authorities (a:list all authorities / l: list all dc elements / n: enter new authority / x: exit and continue)
+2.addAuthDCElements=DC elements as authorities\n\ta:list all authorities\n\tl: list all dc elements\n\tn: enter new authority\n\tx: exit and continue)
 2.addAuthDCElements.listauth=List all Authorities
 2.addAuthDCElements.listdc=List all DC elements
 2.addAuthDCElements.notauthdcelements=There are not auth dc elements. You must enter a new authority.
@@ -145,7 +145,7 @@
 3.createAuth.noadmin=User #?# is not admin
 3.createAuth.notschema=There is not schema #?#
 3.createAuth.numelements=Number elements in schema #?#:  #?#
-3.createAuth.menu=DC elements as authorities collections (a:list all authorities in collections / d: list all authorities in dspace.cfg / l: list all dc elements / n: enter new authority / x: exit)
+3.createAuth.menu=DC elements as authorities collections\n\ta:list all authorities in collections\n\td: list all authorities in dspace.cfg\n\tl: list all dc elements\n\tn: enter new authority\n\tx: exit
 3.createAuth.listauth=List all Authorities in collections
 3.createAuth.listauth.dspace=List all Authorities in dspace.cfg
 3.createAuth.listdc=List all DC elements
@@ -197,6 +197,7 @@
 4.configureInputFormsDspace.inputforms.add=Creating new input-forms.xml in #?# to add the authorities.\nWhen you have checked the file, replace #?# with this new one.
 4.configureInputFormsDspace.inputforms.file.exists=#?# File exists. Replace it ([y]/n)?
 
+4.readInputFormsDspace.configure.element.form=¿Configure element "#?#" at form "#?#" (y/[n])?
 4.readInputFormsDspace.element.page=Which page the element "#?#" at form "#?#" must go to in the input-forms?
 4.readInputFormsDspace.element.form=Which collections the element "#?#" for vocabulary "#?#" must go to in the input-forms (input handles or/and default for all separated by commas)?
 
