--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -115,7 +115,7 @@
 2.configureAll.dspacedirconf.notexist=El directorio #?# no existe o no tiene permisos de lectura, o el directorio actual #?# no tiene permisos de escritura.
 2.configureAll.restart=Se ha modificado el archivo "dspace.cfg" en el directorio de trabajo #?#.\nDebe copiarlo al directorio de configuración de dspace.\nDebe reiniciar el servidor de aplicaciones (e.g. Tomcat) y este instalador después.
 
-2.addAuthDCElements=Elementos DC para las autoridades (a:listar todas las autoridades / l: listar todos los elementos dc / n: introducir nueva autoridad / x: salir y continuar)
+2.addAuthDCElements=Elementos DC para las autoridades\n\ta:listar todas las autoridades\n\tl: listar todos los elementos dc\n\tn: introducir nueva autoridad \n\tx: salir y continuar
 2.addAuthDCElements.listauth=Listar todas las autoridades
 2.addAuthDCElements.listdc=Listar todos los elementos DC
 2.addAuthDCElements.notauthdcelements=No hay elementos de autoridades dc. Debe introducir una nueva autoridad.
@@ -146,7 +146,7 @@
 3.createAuth.noadmin=El usuario #?# no es administrador
 3.createAuth.notschema=No existe el esquema #?#
 3.createAuth.numelements=Número de elementos en el esquema #?#:  #?#
-3.createAuth.menu=Elementos DC para las colecciones de autoridades (a:listar todas las autoridades en colecciones / d: listar todas las autoridades en dspace.cfg / l: listar todos los elementos dc / n: introducir nueva autoridad / x: salir)
+3.createAuth.menu=Elementos DC para las colecciones de autoridades\n\ta:listar todas las autoridades en colecciones\n\td: listar todas las autoridades en dspace.cfg\n\tl: listar todos los elementos dc\n\tn: introducir nueva autoridad\n\tx: salir
 3.createAuth.listauth=Listar todas las autoridades en colecciones
 3.createAuth.listauth.dspace=Listar todas las autoridades en dspace.cfg
 3.createAuth.listdc=Listar todos los elementos DC
@@ -197,10 +197,11 @@
 4.configureInputFormsDspace.inputforms.add=Creando un nuevo archivo input-forms.xml en #?# para añadir las autoridades.\nCuando haya comprobado el archivo, reemplace #?# con éste.
 4.configureInputFormsDspace.inputforms.file.exists=El archivo #?# existe. ¿Reemplazarlo ([s]/n)?
 
+4.readInputFormsDspace.configure.element.form=¿Configurar el elemento "#?#" en el formulario "#?#" (s/[n])?
 4.readInputFormsDspace.element.page=¿A qué página el elemento "#?#" del formulario "#?#" debe ir en el archivo input-forms?
 4.readInputFormsDspace.element.form=¿A qué colecciones el elemento "#?#" del vocabulario "#?#" debe ir en el archivo input-forms (introduzca sus handles o/y default para todas las colecciones separados por comas)?
 
-4.updateElementvocabulary=¿Cambiar el vocabulario actual "#?#" para el elemento "#?#" en el formulario "#?#" oor nuevo vocabulario "#?#" (s/[n])?
+4.updateElementvocabulary=¿Cambiar el vocabulario actual "#?#" para el elemento "#?#" en el formulario "#?#" por nuevo vocabulario "#?#" (s/[n])?
 
 4.addFieldForm.label=Etiqueta para el elemento: #?#
 4.addFieldForm.hint=Ayuda para el elemento: #?#
