Copiar todas las librerias de lucene a EDMExport.war segun dspace actual

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -221,6 +221,10 @@
 5.replaceDspaceApi.notmatch=There is not file with pattern #?# at dir #?#
 5.replaceDspaceApi.notdir=#?# dir does not exist or is not readable
 
+5.replaceLuceneCoreLib.luceneCoreLib=New lucene library #?#
+5.replaceLuceneCoreLib.notmatch=There is not file with pattern #?# at dir #?#
+5.replaceLuceneCoreLib.notdir=#?# dir does not exist or is not readable
+
 5.configure.edmexport.add=Creating new EDMExport.war in #?#.
 5.configure.edmexport.file.exists=#?# File exists. Replace it ([y]/n)?
 5.configure.notwebxml=There is not exist the file "WEB-INF/web.xml" inside the war file
