--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -216,10 +216,14 @@
 5.checkEDMExporWar.newwar=Introduzca la ruta del archivo war o intro para terminar.
 
 5.replaceDspaceApi.dspaceApi=Nueva api de dspace #?#
-5.writeNewJar.notIS=No se puedo crear el InputStream para la entrada #?#
+5.writeNewJar.notIS=No se ha creado el InputStream para la entrada #?#
 5.writeNewJar.replace=Reemplazar entrada #?# con #?# desde #?#
 5.replaceDspaceApi.notmatch=No existe el archivo con patrón #?# en el directorio #?#
 5.replaceDspaceApi.notdir=No existe el directorio #?# o no tiene permisos de lectura
+
+5.replaceLuceneCoreLib.luceneCoreLib=Nueva librería de Lucene #?#
+5.replaceLuceneCoreLib.notmatch=No existe el archivo con patrón #?# en el directorio #?#
+5.replaceLuceneCoreLib.notdir=No existe el directorio #?# o no tiene permisos de lectura
 
 5.configure.edmexport.add=Creando nuevo EDMExport.war en #?#.
 5.configure.edmexport.file.exists=El archivo #?# existe. ¿Reemplazarlo ([s]/n)?
