--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -217,7 +217,8 @@
 
 5.replaceDspaceApi.dspaceApi=Nueva api de dspace #?#
 5.writeNewJar.notIS=No se ha creado el InputStream para la entrada #?#
-5.writeNewJar.replace=Reemplazar entrada #?# con #?# desde #?#
+5.writeNewJar.replace.question=¿Reemplazar entrada #?# con #?# desde #?# ([s]/n)?
+5.writeNewJar.replace=Reemplazado entrada #?# con #?# desde #?#
 5.replaceDspaceApi.notmatch=No existe el archivo con patrón #?# en el directorio #?#
 5.replaceDspaceApi.notdir=No existe el directorio #?# o no tiene permisos de lectura
 
