Arreglar consulta askosi vocabulary para oracle

--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -74,8 +74,8 @@
 1.copyJarsShared.dirnew.copyjars=Lo archivos jar para Askosi se copiarán en la ruta a introducir:
 
 1.copyPackageFile.fileexists=El archivo #?# ya existe. ¿Quiere reemplazarlo (s/[n])?
-1.copyPackageFile.copyfile=Archivo #?# copiado a #?#
-1.copyPackageFile.orverwritingfile=Reemplazando archivo
+1.copyPackageFile.copyfile=Archivo #?# copiando a #?#
+1.copyPackageFile.orverwritingfile=Reemplazado archivo
 1.copyDatabaseDrivers.dir.copyjars=Los ficheros jar para base de datos requeridos por Askosi se copiarán a la nueva ruta: #?# (Pulse intro para continuar)
 1.copyDatabaseDrivers.dirnew.copyjars=Los ficheros jar para base de datos requeridos por Askosi se copiarán en la ruta a introducir:
 1.copyDatabaseDrivers.copy.fail=Error en la copia #?#
