Instalador en windows

--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -93,7 +93,7 @@
 
 1.changeWebXml.noSKOSdirectory=No existe el parámetro "SKOSdirectory" en el archivo #?#
 
-1.copyAskosiPlugJspui.dir=Directorio donde está desplegado el jspui (e.g.: #?#/webapps/jspui): (Pulse intro para continuar)
+1.copyAskosiPlugJspui.dir=Directorio donde está desplegado el módulo jspui (e.g.: #?#/webapps/jspui): (Pulse intro para continuar)
 1.copyAskosiPlugJspui.ok=El plugin de Askosi para jspui se extrajo y copió correctamente
 1.copyAskosiPlugJspui.fail=El plugin de Askosi para jspui se extrajo y copió incorrectamente
 
