Anyadir mensaje al finalizar de configurar input-forms para avisar de los pasos en item-submission.xml y webui.submit.upload.required en dspace.cfg

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -197,6 +197,7 @@
 4.configureInputFormsDspace.inputforms.add=Creating new input-forms.xml in #?# to add the authorities.\nWhen you have checked the file, replace #?# with this new one.
 4.configureInputFormsDspace.inputforms.file.exists=#?# File exists. Replace it ([y]/n)?
 
+4.readInputFormsDspace.processInputForms.end=For every form created, the steps to submit items can be configured at item-submission.xml.\nIf you don't want it to be mandatory to upload files with the item, you can modify the property "webui.submit.upload.required" at dspace.cfg.
 4.readInputFormsDspace.configure.element.form=¿Configure element "#?#" at form "#?#" (y/[n])?
 4.readInputFormsDspace.element.page=Which page the element "#?#" at form "#?#" must go to in the input-forms?
 4.readInputFormsDspace.element.form=Which collections the element "#?#" for vocabulary "#?#" must go to in the input-forms (input handles or/and default for all separated by commas)?
