--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -197,6 +197,7 @@
 4.configureInputFormsDspace.inputforms.add=Creando un nuevo archivo input-forms.xml en #?# para añadir las autoridades.\nCuando haya comprobado el archivo, reemplace #?# con éste.
 4.configureInputFormsDspace.inputforms.file.exists=El archivo #?# existe. ¿Reemplazarlo ([s]/n)?
 
+4.readInputFormsDspace.processInputForms.end=Para cada uno de los formularios creados puede ajustar los pasos de su catalogación en item-submission.xml.\nSi no quiere la obligatoriedad de asociar un archivo al ítem, puede modificar la propiedad "webui.submit.upload.required" en dspace.cfg.
 4.readInputFormsDspace.configure.element.form=¿Configurar el elemento "#?#" en el formulario "#?#" (s/[n])?
 4.readInputFormsDspace.element.page=¿A qué página el elemento "#?#" del formulario "#?#" debe ir en el archivo input-forms?
 4.readInputFormsDspace.element.form=¿A qué colecciones el elemento "#?#" del vocabulario "#?#" debe ir en el archivo input-forms (introduzca sus handles o/y default para todas las colecciones separados por comas)?
