Anyadir mensaje para las etiquetas jsp.tools.lookup.field. al crear los elementos en dspace.cfg

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -130,6 +130,7 @@
 2.configureDspaceCfg.element.add.fail=#?# Element failed to be added.
 2.configureDspaceCfg.element.add=#?# Element added.
 2.configureDspaceCfg.nothing.add= No auth elements added to dspace.cfg.
+2.configureDspaceCfg.messages=For every element added, you should create a label "jsp.tools.lookup.field.*" in the messages files at WEB-INF/classes/ for your jspui deployed.
 
 2.readDspaceCfg.line.found.data=Found line: #?# with data dir #?#
 2.readDspaceCfg.line.found.content=Found line: #?# with content #?#
