--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -131,6 +131,7 @@
 2.configureDspaceCfg.element.add.fail=El elemento #?# no se pudo añadir.
 2.configureDspaceCfg.element.add=Elemento #?# añadido.
 2.configureDspaceCfg.nothing.add=No se añadieron elementos de autoridad al archivo dspace.cfg.
+2.configureDspaceCfg.messages=Para cada uno de los elementos añadidos cree las etiquetas "jsp.tools.lookup.field.*" en los archivos messages en WEB-INF/classes/ de su jspui desplegado.
 
 2.readDspaceCfg.line.found.data=Línea encontrada: #?# con el directorio de datos #?#
 2.readDspaceCfg.line.found.content=Línea encontrada: #?# con el contenido #?#
