Cambiar ProviderCHO por ProvidedCHO. Cambiar RDF por rdf:RDF. En bat quitar preferencia de JAVA_HOME por el parametro

--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -63,7 +63,7 @@
 1.installPackages.title=Comenzando la copia de los archivos jar requeridos por Askosi
 1.installPackages.jarok=Archivos jar correctamente copiados
 1.installPackages.db.title=Comanzado la copia del driver de la base de datos
-1.installPackages.deploy.title=Comenzando despliegue de la aplicación web Askosi\n(es conveniente realizarla en el directorio webapss de Tomcat porque se desplegará automáticamente sin añadir context a server.xml)
+1.installPackages.deploy.title=Comenzando despliegue de la aplicación web Askosi\n(es conveniente realizarla en el directorio webapps de Tomcat porque se desplegará automáticamente sin añadir context a server.xml)
 1.installPackages.deploy.plugin.title=Comenzando despliegue del plugin para jspui de Askosi
 1.installPackages.datadir.title=Comenzando la creación del directorio de datos de Askosi
 
