Arreglar Crosswalk de xsl para mostrar bien el identifier Arreglar el Crosswalk de java para mostrar el contributor.author como edm:Agent Arreglar etiquetas de comunidades y colecciones al preguntar por ellas al crear autoridades

--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -155,7 +155,7 @@
 3.createAuth.notauthdcelements=No hay elementos de autoridades dc. Debe introducir una nueva autoridad.
 
 3.createElementAuth.dc.element=Elemento DC (escribir x para volver al menú anterior):
-3.createElementAuth.handle.community=Introduzca el handle de la comunidad o deje vacío para crear una nueva:
+3.createElementAuth.handle.community=Introduzca el handle de la subcomunidad o deje vacío para crear un nuevo conjunto comunidad-subcomunidad:
 3.createElementAuth.handle.collection=Introduzca el handle de la colección o deje vacío para crear una nueva:
 3.createElementAuth.element.notallowed=El elemento "#?#" no está permitido como autoridad.
 3.createElementAuth.element.nonauthcontrolled=El elemento "#?#" no está configurado en dspace.cfg para tener autoridades o controlado por ellas. Ir al paso 2.
@@ -170,11 +170,11 @@
 3.fillAuthItems.collection.item.noelement=Colección #?# item #?# no posee element #?# , idioma: #?#
 3.fillAuthItems.numItemsModified=Número de ítems añadidos/modificados para el elemento #?#: #?#
 
-3.askCommunity.handle=Introduzca el handle de la comunidad padre o vacío para crear una nueva:
-3.askCommunity.name=Nombre de la comunidad:
+3.askCommunity.handle=Introduzca el handle de la comunidad o vacío para crear una nueva subcomunidad:
+3.askCommunity.name=Nombre de la subcomunidad:
 3.askCommunity.notexist=El handle #?# no existe o no es de una comunidad.
 
-3.askCollection.handle=Introduzca el handle de la colección padre o vacío para crear una nueva:
+3.askCollection.handle=Introduzca el handle de la colección o vacío para crear una nueva:
 3.askCollection.name=Nombre de la colección:
 3.askCollection.notexist=El handle #?# no existe o no es de una colección.
 
