--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -154,8 +154,8 @@
 3.createAuth.notauthdcelements=There are not auth dc elements. You must enter a new authority.
 
 3.createElementAuth.dc.element=DC Element (type x to go former menu):
-3.createElementAuth.handle.community=Handle community or empty to create new:
-3.createElementAuth.handle.collection=Handle collection or empty to create new:
+3.createElementAuth.handle.community=Enter subcommunity handle or empty to create new set community-subcommunity:
+3.createElementAuth.handle.collection=Enter collection handle or empty to create new:
 3.createElementAuth.element.nonauthcontrolled="#?#" element is not authority controlled in dspace.cfg. Go to step 2.
 3.createElementAuth.element.notallowed="#?#" element is not allowed to be an authority.
 3.createElementAuth.element.notexist=#?# Element does not exist.
@@ -169,11 +169,11 @@
 3.fillAuthItems.collection.item.noelement=Collection #?# item #?# has not element #?# , language: #?#
 3.fillAuthItems.numItemsModified=Number of modified/added items for the element #?#: #?#
 
-3.askCommunity.handle=Handle of parent community or empty:
-3.askCommunity.name=Community name:
+3.askCommunity.handle=Enter community handle or empty to create a new subcommunity:
+3.askCommunity.name=Subcommunity name:
 3.askCommunity.notexist=#?# Handle does not exist or is not a community.
 
-3.askCollection.handle=Handle of collection or empty:
+3.askCollection.handle=Enter collection handle or empty to create a new one:
 3.askCollection.name=Collection name:
 3.askCollection.notexist=#?# Handle does not exist or is not a collection.
 
