Preguntar por el idiona cuando se enlazan los autoridades

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -298,6 +298,7 @@
 
 8.configure.auth.num=Number of auth elements: #?#
 8.configure.checkAllSkosAuthElements=Getting the DC elements related to authorities
+8.configure.language=Language of dc elements (* for all, null for null): #?#
 8.configure.traverseNonauthItems=Traversing items to assign authorities to the DC elements matching an authority
 8.configure.numItemsModified=Number of modified items: #?#
 
@@ -308,12 +309,12 @@
 8.traverseNonauthItems.searchNonAuthItems=Searching authority with dc element #?# and value #?#
 
 8.showMenuDCElements=Menu to select Auth DC elements
-8.showMenuDCElements.menu=l: list DC elements|a: use all DC elements|x: exit|write DC elements separated by commas
+8.showMenuDCElements.menu=l: list DC elements\na: use all DC elements\nx: exit\nwrite DC elements separated by commas or an option:
 8.showMenuDCElements.listdc=List of Auth DC Elements
 8.showMenuDCElements.dcelement.notexist=Element #?# does not exist
 8.showMenuDCElements.dcelement.notallowed="#?#" element is not allowed to be an authority.
 
 8.showMenuCollections=Menu to select collections of non auth items
-8.showMenuCollections.menu=a: use all the collections|x: exit|write the collections handles\
-  separated by commas
+8.showMenuCollections.menu=a: use all the collections\nx: exit\nwrite the collections handles\
+  separated by commas or an option:
 8.showMenuCollections.collection.notexist=Collection with handle #?# does not exist
