--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -298,6 +298,7 @@
 
 8.configure.auth.num=Número de elementos de autoridades: #?#
 8.configure.checkAllSkosAuthElements=Recogiendo los elementos DC que son autoridades
+8.configure.language=Idioma para los elementos dc (* para todos, null para null): #?#
 8.configure.traverseNonauthItems=Recorriendo los ítems para asignarles autoridades a los elementos DC con valores coincidentes con una autoridad
 8.configure.numItemsModified=Número de ítems modificados: #?#
 
@@ -308,13 +309,13 @@
 8.traverseNonauthItems.searchNonAuthItems=Buscando autoridad con elemento dc #?# y valor #?#
 
 8.showMenuDCElements=Menú para seleccionar elementos DC de las autoridades
-8.showMenuDCElements.menu=l: listar los elementos DC|a: usar todos los elementos DC|x: salir|escribir elementos DC \
-  separados por coma
+8.showMenuDCElements.menu=l: listar los elementos DC\na: usar todos los elementos DC\nx: salir\nescribir elementos DC \
+  separados por coma o una de las opciones:
 8.showMenuDCElements.listdc=Lista de elementos DC de las autoridades
 8.showMenuDCElements.dcelement.notexist=El elemento #?# no existe
 8.showMenuDCElements.dcelement.notallowed=El elemento "#?#" no está permitido como autoridad.
 
 8.showMenuCollections=Menú para seleccionar colecciones de ítems que no son autoridades
-8.showMenuCollections.menu=a: usar todas las colecciones|x: salir|escribir los handles de la colecciones \
-  separados por coma
+8.showMenuCollections.menu=a: usar todas las colecciones\nx: salir\nescribir los handles de la colecciones \
+  separados por coma o una de las opciones:
 8.showMenuCollections.collection.notexist=La colección con handle #?# no existe
