Poder compilar mas crosswalk de java en oai

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -1,6 +1,6 @@
 0=Installation EDM
 0.steps=1,2,3,4,5,6,7,8,9
-0.menu=1: Installing Askosi|2: Configuring Dspace: file dspace.cfg|3: Create Auth Items|4: Configuring dspace: input-forms.xml and askosi|5: Configure EDMExport|6: Configure EDMCrosswalk|7: Configure EDMCrosswalk with xsl|8: Fill skos:about items with values of authorities|9: Exit
+0.menu=1: Installing Askosi|2: Configuring Dspace: file dspace.cfg|3: Create Auth Items|4: Configuring dspace: input-forms.xml and askosi|5: Configure EDMExport|6: Configure EDMCrosswalk/ESECrosswalk|7: Configure EDMCrosswalk with xsl|8: Fill skos:about items with values of authorities|9: Exit
 0.error.commands=You must provide at least one command argument
 0.error.fail.init=Failure during filter init: #?#
 0.error.dspace.dir=The DSpace installation directory is no defined!!
@@ -237,8 +237,10 @@
 5.configure.dspacecfg.nok=Error configuring EDMExport
 
 
-6=Beginning step 6: Configuring EDMCrosswalk with your oaicat.properties and dspace-oai-api jar
-6.summary=File "EDMCrosswalk.java" will be copied from packages dir to the work dir.\nDspace oai api jar file will be copied from the dir where is deployed or the path will be asked to the work dir.\nValues will be asked for edm specific elements as edm.rights and edm.types.\nFile "EDMCrosswalk,java" will be modified with these new values.\nThis file will be compiled and added to the dspace oai api jar file.\nFile "oaicat.properties" will be copied from dspace config file to the work dir and a property will be added for edm and EDMCrosswalk.
+6=Beginning step 6: Configuring Crosswalk with your oaicat.properties and dspace-oai-api jar
+6.summary=File "XXXCrosswalk.java" will be copied from packages dir to the work dir.\nDspace oai api jar file will be copied from the dir where is deployed or the path will be asked to the work dir.\nValues might be asked for format specific elements as edm.rights and edm.types.\nFile "XXXCrosswalk,java" will be modified with these new values.\nThis file will be compiled and added to the dspace oai api jar file.\nFile "oaicat.properties" will be copied from dspace config file to the work dir and a property will be added for the format and XXXCrosswalk.
+
+6.chooseCrosswalk=Choose among the next available formats as crosswalks to install: #?#
 
 6.checkEdmCrowssWalk.notexists=#?# class file does not exist is not a file or is not writable
 6.checkEdmCrowssWalk.newclass=Introduce new class file or intro fo finish.
@@ -260,10 +262,10 @@
 6.configure.edmcrosswalk.conf.updatejar=Updating jar file "#?#" with the new class
 6.configure.edmcrosswalk.oaicat.add=Creating new oaicat.properties in #?#.\nWhen you have checked the file, replace #?# with this new one.
 6.configure.edmcrosswalk.oaicat.file.exists=#?# File exists. Replace it ([y]/n)?
-6.configure.edmcrosswalk.conf.oaicat=Oai file properties to copy to work dir to add EDMCrosswalk, "#?#" or give another one:
-6.configure.edmcrosswalk.conf.ok=Configuring EDMCrosswalk finished successfully. Remember to copy the files on work to dspace environment:\n oaicat.properties to the dspace config dir\n #?# to the WEB-INF/lib dir of the oai deployed module.
-6.configure.edmcrosswalk.conf.nok=Error configuring EDMCrosswalk
-6.confOaiCatProperties.exist=File "oaicat.properties" already has a property "Crosswalks.edm" with value: #?#. Our value must be: #?#
+6.configure.edmcrosswalk.conf.oaicat=Oai file properties to copy to work dir to add the Crosswalk, "#?#" or give another one:
+6.configure.edmcrosswalk.conf.ok=Configuring Crosswalk finished successfully. Remember to copy the files on work to dspace environment:\n oaicat.properties to the dspace config dir\n #?# to the WEB-INF/lib dir of the oai deployed module.
+6.configure.edmcrosswalk.conf.nok=Error configuring Crosswalk
+6.confOaiCatProperties.exist=File "oaicat.properties" already has a property #?# with value: #?#. Our value must be: #?#
 
 
 7=Beginning step 7: Configure EDMCrosswalk with xsl
