--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -1,6 +1,6 @@
 0=Instalador EDM
 0.steps=1,2,3,4,5,6,7,8,9
-0.menu=1: Instalar Askosi|2: Configurar Dspace: archivo dspace.cfg|3: Crear Items de Autoridad|4: Configurar Dspace: input-forms.xml y askosi|5: Configurar EDMExport|6: Configurar EDMCrosswalk|7: Configurar EDMCrosswalk mediante xsl|8: Rellenar skos:about de ítems con valores de autoridades|9: Salir
+0.menu=1: Instalar Askosi|2: Configurar Dspace: archivo dspace.cfg|3: Crear Items de Autoridad|4: Configurar Dspace: input-forms.xml y askosi|5: Configurar EDMExport|6: Configurar EDMCrosswalk/ESECrosswalk|7: Configurar EDMCrosswalk mediante xsl|8: Rellenar skos:about de ítems con valores de autoridades|9: Salir
 0.error.commands=Debe suministrar al menos un parámetro al lanzar el instalador
 0.error.fail.init=Error durante el inicio del kernel de dspace: #?#
 0.error.dspace.dir=El directorio donde se instaló Dspace no está definido!!
@@ -237,8 +237,10 @@
 5.configure.dspacecfg.nok=Error configurando EDMExport
 
 
-6=Comenzado el paso 6: Configuración del EDMCrosswalk con sus archivos de dspace: oaicat.properties y dspace-oai-api jar
-6.summary=Se copiará el archivo "EDMCrosswalk.java" de packages al directorio de trabajo.\nSe copiará el archivo jar de la api de oai de dspace desde el directorio donde esté desplegado o se pedirá la ruta, al directorio de trabajo.\nSe pedirán valores para elementos específicos de EDM com son edm.rights y edm.types.\nSe modificará el archivo "EDMCrosswalk,java" con estos valores.\nSe compilará y se introducirá en el archivo jar de la api de oai de dspace.\nSe copiará el archivo "oaicat.properties" desde el directorio de configuración de dspace al directorio de trabajo y se añadirá la directiva para el formato edm con el EDMCrosswalk.
+6=Comenzado el paso 6: Configuración del Crosswalk con sus archivos de dspace: oaicat.properties y dspace-oai-api jar
+6.summary=Se copiará el archivo "XXXCrosswalk.java" de packages al directorio de trabajo.\nSe copiará el archivo jar de la api de oai de dspace desde el directorio donde esté desplegado o se pedirá la ruta, al directorio de trabajo.\nSe puede configurar para pedir valores para elementos específicos. Ej.: EDM com son edm.rights y edm.types.\nSe modificará el archivo "XXXCrosswalk,java" con estos valores.\nSe compilará y se introducirá en el archivo jar de la api de oai de dspace.\nSe copiará el archivo "oaicat.properties" desde el directorio de configuración de dspace al directorio de trabajo y se añadirá la directiva para el formato con el XXXCrosswalk.
+
+6.chooseCrosswalk=Escoja entre los siguientes formatos disponibles como crosswalks a instalar: #?#
 
 6.checkEdmCrowssWalk.notexists=El archivo de la clase de java #?# no existe o no tiene permisos de escritura
 6.checkEdmCrowssWalk.newclass=Introduzca la ruta del archivo de la clase de java para EDMCrosswalk o intro para terminar.
@@ -260,10 +262,10 @@
 6.configure.edmcrosswalk.conf.updatejar=Actualizando el archivo jar "#?#" con la nueva clase
 6.configure.edmcrosswalk.oaicat.add=Creando nuevo archivo oaicat.properties en #?#.\nCuando haya comprobado el archivo, reemplace #?# con éste.
 6.configure.edmcrosswalk.oaicat.file.exists=El archivo #?# existe. ¿Reemplazarlo ([s]/n)?
-6.configure.edmcrosswalk.conf.oaicat=El archivo de propiedades de Oai para copiar al directorio de trabajo para añadir el EDMCrosswalk, "#?#" o introduzca uno nuevo:
-6.configure.edmcrosswalk.conf.ok=La configuración del EDMCrosswalk terminó correctamente. Recuerde copiar los archivos del directorio de trabajo del instalador al entorno de dspace:\n oaicat.properties al directorio de configuración de dspace\n #?# al directorio WEB-INF/lib donde se haya desplegado el módulo oai de dspace.
-6.configure.edmcrosswalk.conf.nok=Error configurando el EDMCrosswalk
-6.confOaiCatProperties.exist=Ya existe en el archivo "oaicat.properties" una propiedad "Crosswalks.edm" con valor: #?#. Nuestro valor debe ser: #?#
+6.configure.edmcrosswalk.conf.oaicat=El archivo de propiedades de Oai para copiar al directorio de trabajo para añadir el Crosswalk, "#?#" o introduzca uno nuevo:
+6.configure.edmcrosswalk.conf.ok=La configuración del Crosswalk terminó correctamente. Recuerde copiar los archivos del directorio de trabajo del instalador al entorno de dspace:\n oaicat.properties al directorio de configuración de dspace\n #?# al directorio WEB-INF/lib donde se haya desplegado el módulo oai de dspace.
+6.configure.edmcrosswalk.conf.nok=Error configurando el Crosswalk
+6.confOaiCatProperties.exist=Ya existe en el archivo "oaicat.properties" una propiedad #?# con valor: #?#. Nuestro valor debe ser: #?#
 
 
 7=Comenzando el paso 7: Configurar EDMCrosswalk mediante xsl
