Anyadir edm:ugc con valor true en ore:Aggregation si asi se pide

--- a/src/org/dspace/installer_edm/messages_en.properties
+++ b/src/org/dspace/installer_edm/messages_en.properties
@@ -252,6 +252,7 @@
 6.configure.edmcrosswalk.oaiapijar.file.exists=#?# File exists. Replace it ([y]/n)?
 6.configure.exists.class=There is already a "#?#" in the "#?#" jar file. Continue (y/[n])?
 6.configure.edmcrosswalk.conf.begin=Beginning the configuration of the "#?#" to customize some parameters
+6.configure.edmcrosswalk.conf.edmugc=Add edm:ugc (y/[n])?
 6.configure.edmcrosswalk.conf.edmrights=Url for the element edm.rights:
 6.configure.edmcrosswalk.conf.edmrights.new=There is a value for edm.rights: "#?#", replace it with "#?#" (y/[n])?
 6.configure.edmcrosswalk.conf.edmtypes.exist=Actually exist the next types configured with their values (these ones will be look for when visualized and they'll be replaced by the type):
