--- a/src/org/dspace/installer_edm/messages_es.properties
+++ b/src/org/dspace/installer_edm/messages_es.properties
@@ -252,6 +252,7 @@
 6.configure.edmcrosswalk.oaiapijar.file.exists=El archivo #?# existe. ¿Reemplazarlo ([s]/n)?
 6.configure.exists.class=Ya existe la clase "#?#" en el archivo jar "#?#". ¿Continuar, se reemplazará el actual (s/[n])?
 6.configure.edmcrosswalk.conf.begin=Comenzando la configuración de "#?#" para parametrizarlo.
+6.configure.edmcrosswalk.conf.edmugc=¿Añadir edm:ugc (s/[n])?
 6.configure.edmcrosswalk.conf.edmrights=Url para el elemento edm.rights:
 6.configure.edmcrosswalk.conf.edmrights.new=Ya existe un valor para edm.rights: "#?#", ¿reemplazarlo con "#?#" (s/[n])?
 6.configure.edmcrosswalk.conf.edmtypes.exist=Actualmente existen los siguientes tipos para edm.types con los valores (estos se buscarán al mostrar y sustituirán por el tipo):
